# provenance-btc

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: frontend.yml  release.yml  rust.yml
apps/provenance-desktop/: README.md  package-lock.json  package.json
apps/provenance-desktop/frontend/: eslint.config.js  package-lock.json  package.json
apps/provenance-desktop/frontend/src/: App.css  App.tsx  index.css
apps/provenance-desktop/frontend/src/__tests__/: App.test.tsx
apps/provenance-desktop/frontend/src/components/: AlertBanner.tsx  DetailPanel.tsx  GraphCanvas.tsx  RootCandidatePicker.css  RootCandidatePicker.tsx  RpcConnectionModal.css  RpcConnectionModal.tsx  Sidebar.tsx  TopBar.tsx
apps/provenance-desktop/frontend/src/hooks/: useGraph.ts  useGraphInputCapabilities.ts  useTransactionDetail.ts
apps/provenance-desktop/frontend/src/state/: graphControls.ts
apps/provenance-desktop/frontend/src/styles/: layout.css  primitives.css  (+2 more)
apps/provenance-desktop/src-tauri/: Cargo.toml  provenance.sqlite3  tauri.conf.json
apps/provenance-desktop/src-tauri/icons/: icon.icns
apps/provenance-desktop/src-tauri/src/: main.rs
crates/provenance-core/: Cargo.toml
crates/provenance-core/examples/: trace.rs
crates/provenance-core/src/: error.rs  lib.rs  main.rs
crates/provenance-core/src/api/: input_resolver.rs  mod.rs  types.rs
crates/provenance-core/src/bip329/: export.rs  import.rs  mod.rs  types.rs  validate.rs
crates/provenance-core/src/model/: helpers.rs  input_target.rs  mod.rs  tx_parents.rs  tx_view.rs
crates/provenance-core/src/provenance/: graph.rs  mod.rs  trace.rs
crates/provenance-core/src/reporting/: context.rs  mod.rs  report.rs
crates/provenance-core/src/rpc/: client.rs  indexinfo.rs  mod.rs  types.rs
crates/provenance-core/src/store/: bip329_records.rs  classifications.rs  db.rs  labels.rs  mod.rs  tx_hex_cache.rs
crates/provenance-core/tests/: model_tx_parents.rs  model_tx_view_fee.rs  provenance_graph.rs  provenance_trace.rs  provenance_trace_cache.rs  rpc_indexinfo_parsing.rs  rpc_live_core_status.rs  store_db_persistence.rs  store_labels.rs  store_tx_hex_cache_sqlite.rs
(+16 files in other folders)
