[package]
name = "provenance-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local-first Bitcoin provenance analysis, labeling, and reporting core library."
repository = "https://github.com/VittoriDavide/provenance"
keywords = ["bitcoin", "utxo", "provenance", "labels", "bip329"]
categories = ["cryptography::cryptocurrencies", "finance"]

[lib]
name = "provenance_core"
path = "src/lib.rs"

[features]
default = ["rpc-bitcoincore", "store-sqlite"]
rpc-bitcoincore = []
store-sqlite = []
# Future:
# rpc-electrum = []

[dependencies]
# Bitcoin primitives and tx parsing
bitcoin = { version = "0.32", features = ["serde"] }

# Bitcoin Core RPC client
bitcoincore-rpc = "0.17"

# Async runtime (use async in core so Tauri commands can be async cleanly)
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time"] }

# Serialization (for Tauri command payloads and exports like BIP-329)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "1"

# SQLite (choose one: rusqlite is simplest; sqlx is heavier but async)
rusqlite = { version = "0.31", features = ["bundled"] }

# Optional: URL parsing for RPC config
url = "2.5"

# Optional: logging (recommended)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
hex = "0.4"
csv = "1.3"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
anyhow = "1"
tempfile = "3"
